--- a/chgadapter/build.gradle
+++ b/chgadapter/build.gradle
@@ -40,8 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'org.jetbrains:annotations-java5:15.0'
-    implementation 'org.jetbrains:annotations-java5:15.0'
+
 }
 
 
@@ -112,3 +111,15 @@ bintray {
         publish = true
     }
 }
+
+
+//// 配置2
+//publish {
+//    userOrg = 'chenhaigang888'             // Binary用户名
+//    repoName = 'CHGAdapter_android'          // Binary上的刚才新建的仓库名（Repository）
+//    groupId = 'scut.carson_ho'        // 依赖名compile 'x:y:z'中的包名x
+//    artifactId = 'CHGAdapter_android'        // 依赖名compile 'x:y:z'中的项目名y
+//    publishVersion = '1.0.0'          // 依赖名compile 'x:y:z'中的版本号z
+//    desc = '给RecycleView写一个统一的Adapter，以后使用不需要写Adapter'            // 对该开源组件的说明
+//    website = 'https://github.com/chenhaigang888/CHGAdapter_android'  // VCS地址，即填写项目上传的Github地址
+//}
