--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,6 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+subprojects {
+    tasks.withType(Javadoc).all { enabled = false }
+}
