--- a/CHGAdapter/build.gradle
+++ b/CHGAdapter/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 
 def siteUrl = 'https://github.com/chenhaigang888/CHGAdapter_android'   // 项目的主页
 def gitUrl = 'https://github.com/chenhaigang888/CHGAdapter_android'   // Git仓库的url
-group = "com.chg.chgadapter"            // Maven Group ID for the artifact，一般填你唯一的包名
+group = "com.chg.CHGAdapter"            // Maven Group ID for the artifact，一般填你唯一的包名
 install {
     repositories.mavenInstaller {
         // This generates POM.xml with proper parameters
@@ -103,7 +103,7 @@ bintray {
     key = properties.getProperty("bintray.apikey")
     configurations = ['archives']
     pkg {
-        repo = "maven"
+        repo = "CHGAdapter_android"
         name = "CHGAdapter_android"   //发布到JCenter上的项目名字
         websiteUrl = siteUrl
         vcsUrl = gitUrl
@@ -111,15 +111,3 @@ bintray {
         publish = true
     }
 }
-
-
-//// 配置2
-//publish {
-//    userOrg = 'chenhaigang888'             // Binary用户名
-//    repoName = 'CHGAdapter_android'          // Binary上的刚才新建的仓库名（Repository）
-//    groupId = 'scut.carson_ho'        // 依赖名compile 'x:y:z'中的包名x
-//    artifactId = 'CHGAdapter_android'        // 依赖名compile 'x:y:z'中的项目名y
-//    publishVersion = '1.0.0'          // 依赖名compile 'x:y:z'中的版本号z
-//    desc = '给RecycleView写一个统一的Adapter，以后使用不需要写Adapter'            // 对该开源组件的说明
-//    website = 'https://github.com/chenhaigang888/CHGAdapter_android'  // VCS地址，即填写项目上传的Github地址
-//}
