一些小改动

--- a/CHGAdapter/build.gradle
+++ b/CHGAdapter/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 
-version = "1.0.2"
+version = "1.0.3"
 
 
 android {
@@ -94,8 +94,12 @@ artifacts {
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
+//    user = properties.getProperty("bintray.user")
+//    key = properties.getProperty("bintray.apikey")
+
+    user = "chenhaigang888"
+    key = "fe95a9df8dff13570f2cd3febc0d44bf63a03761"
+
     configurations = ['archives']
     pkg {
         repo = "CHGAdapter_android"
