--- a/CHGAdapter/build.gradle
+++ b/CHGAdapter/build.gradle
@@ -94,11 +94,10 @@ artifacts {
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 bintray {
-//    user = properties.getProperty("bintray.user")
-//    key = properties.getProperty("bintray.apikey")
 
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
+
+    user = ""
+    key = ""
 
     configurations = ['archives']
     pkg {
