--- a/CHGAdapter/build.gradle
+++ b/CHGAdapter/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 
-version = "1.0.6"
+version = "1.0.7"
 
 
 android {
@@ -96,7 +96,7 @@ properties.load(project.rootProject.file('local.properties').newDataInputStream(
 bintray {
 
 
-    user = ""
+    user = "chenhaigang888"
     key = ""
 
     configurations = ['archives']
